# Autoscaling-Paxos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  acceptor.cpp  acceptor.hpp  batcher.cpp  batcher.hpp  log.hpp  main.cpp  main.hpp  mock_component.cpp  mock_component.hpp  proposer.cpp  proposer.hpp  proxy_leader.cpp  proxy_leader.hpp  test.cpp  test.hpp  unbatcher.cpp  unbatcher.hpp
.github/workflows/: build.yml
aws/: scaling.cpp  scaling.hpp
lib/storage/: anna.cpp  anna.hpp  anna_write_only.cpp  anna_write_only.hpp  storage.hpp  two_p_set.cpp  two_p_set.hpp
messaging/: message.cpp  message.hpp  message.proto
mock/: mock.cpp  mock.hpp
models/: ballot.cpp  ballot.hpp  client_component.cpp  client_component.hpp  component.hpp  heartbeat_component.cpp  heartbeat_component.hpp  log.cpp  log.hpp  message.cpp  message.hpp  message.proto  server_component.cpp  server_component.hpp  threshold_component.cpp  threshold_component.hpp
prometheus/: dashboard.json  throughput_dashboard.json
scripts/: build.sh  build_debug.sh  compile_aspaxos.sh  download_aws.sh  download_protobuf.sh  install_aws.sh  install_dependencies_for_building.sh  install_dependencies_for_running.sh  install_prometheus.sh  install_prometheus_cpp.sh  install_protobuf.sh  submodule_update.sh
utils/: component_types.hpp  config.hpp  heartbeater.hpp  metrics.cpp  metrics.hpp  network.cpp  network.hpp  networkNode.cpp  networkNode.hpp  parser.cpp  parser.hpp  scaling.cpp  scaling.hpp  uuid.cpp  uuid.hpp
utils/scripts/: install_paxos.sh
